# codeup-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  PLAN.md  README.md  SCHEMA.md
.github/: dependabot.yml
.github/workflows/: codeup.yml  release.yml
crates/codeup/: Cargo.toml
crates/codeup-core/: Cargo.toml
crates/codeup-core/resources/eval/: README.md  self-scan.jsonl
crates/codeup-core/src/: cache.rs  catalogue.rs  intent.rs  knowledge.rs  lib.rs  migrations.rs  quality.rs  schema.rs
crates/codeup-core/src/scanner/: graph.rs  imports.rs  mod.rs  walk.rs
crates/codeup/src/: analyzer.rs  cache.rs  main.rs  runner.rs  sarif.rs  store.rs
crates/codeup/src/llm/: anthropic.rs  github_models.rs  mod.rs  provider.rs  retry.rs
scripts/: eval-catalogue.sh  install.sh  sync-catalogue.sh
