[workspace]
resolver = "3"
members = [
    "crates/codeup-core",
    "crates/codeup",
]

[workspace.package]
version = "0.2.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/johncoleman-thoughtworks/codeup-cli"
authors = ["John Coleman <john.coleman@thoughtworks.com>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-util", "process"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Filesystem walking with .gitignore semantics (the canonical Rust impl)
ignore = "0.4"
globset = "0.4"

# Regex (used by per-language import extractors)
regex = "1"

# Hashing for content + cache keys
sha2 = "0.10"
hex = "0.4"

# HTTP client for Anthropic / GitHub Models
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# CLI parsing
clap = { version = "4", features = ["derive", "env"] }

# Tracing / logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Async utilities
futures = "0.3"

[profile.release]
# Smaller binary; ~30 MB target uncompressed.
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
