[package]
name = "codeup"
description = "Codeup CLI — architectural anti-pattern scanner for the command line and GitHub Actions."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "codeup"
path = "src/main.rs"

[dependencies]
codeup-core = { path = "../codeup-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
reqwest.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
futures.workspace = true
